# Libjpeg

LibJpeg/app/: CMakeLists.txt  build.gradle
LibJpeg/app/src/androidTest/java/libjpeg/handpay/com/libjpeg/: ExampleInstrumentedTest.java
LibJpeg/app/src/main/: AndroidManifest.xml
LibJpeg/app/src/main/cpp/: libjpeg_utils.cpp
LibJpeg/app/src/main/cpp/include/: libjpeg_utils.h
LibJpeg/app/src/main/cpp/include/jpeg/: jmorecfg.h
LibJpeg/app/src/main/java/libjpeg/handpay/com/libjpeg/: ImageCompressHelper.java  MainActivity.java
LibJpeg/app/src/main/res/layout/: activity_main.xml
LibJpeg/app/src/test/java/libjpeg/handpay/com/libjpeg/: ExampleUnitTest.java
LibJpeg/gradle/wrapper/: gradle-wrapper.properties
